<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>

    <!-- Buttons -->
    <string name="media_streamer">Spotify streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it">Build it bigger</string>
    <string name="bacon_reader">Bacon reader</string>
    <string name="capstone">Capstone: My own app</string>

    <string name="btnMsg">This button will launch %s</string>
</resources>
